--- a/QuanLyThuVien/src/main/java/com/mycompany/quanlythuvien/view/JFrame_Login.form
+++ b/QuanLyThuVien/src/main/java/com/mycompany/quanlythuvien/view/JFrame_Login.form
@@ -1,103 +1,125 @@
-<?xml version="1.0" encoding="UTF-8" ?>
+<?xml version="1.0" encoding="UTF-8"?>
 
 <Form version="1.3" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
   <Properties>
-    <Property name="defaultCloseOperation" type="int" value="3"/>
+    <Property name="defaultCloseOperation" type="int" value="3" />
   </Properties>
   <SyntheticProperties>
-    <SyntheticProperty name="formSizePolicy" type="int" value="1"/>
-    <SyntheticProperty name="generateCenter" type="boolean" value="false"/>
+    <SyntheticProperty name="formSizePolicy" type="int" value="1" />
+    <SyntheticProperty name="generateCenter" type="boolean" value="false" />
   </SyntheticProperties>
   <AuxValues>
-    <AuxValue name="FormSettings_autoResourcing" type="java.lang.Integer" value="0"/>
-    <AuxValue name="FormSettings_autoSetComponentName" type="java.lang.Boolean" value="false"/>
-    <AuxValue name="FormSettings_generateFQN" type="java.lang.Boolean" value="true"/>
-    <AuxValue name="FormSettings_generateMnemonicsCode" type="java.lang.Boolean" value="false"/>
-    <AuxValue name="FormSettings_i18nAutoMode" type="java.lang.Boolean" value="false"/>
-    <AuxValue name="FormSettings_layoutCodeTarget" type="java.lang.Integer" value="1"/>
-    <AuxValue name="FormSettings_listenerGenerationStyle" type="java.lang.Integer" value="0"/>
-    <AuxValue name="FormSettings_variablesLocal" type="java.lang.Boolean" value="false"/>
-    <AuxValue name="FormSettings_variablesModifier" type="java.lang.Integer" value="2"/>
+    <AuxValue name="FormSettings_autoResourcing" type="java.lang.Integer" value="0" />
+    <AuxValue name="FormSettings_autoSetComponentName" type="java.lang.Boolean" value="false" />
+    <AuxValue name="FormSettings_generateFQN" type="java.lang.Boolean" value="true" />
+    <AuxValue name="FormSettings_generateMnemonicsCode" type="java.lang.Boolean" value="false" />
+    <AuxValue name="FormSettings_i18nAutoMode" type="java.lang.Boolean" value="false" />
+    <AuxValue name="FormSettings_layoutCodeTarget" type="java.lang.Integer" value="1" />
+    <AuxValue name="FormSettings_listenerGenerationStyle" type="java.lang.Integer" value="0" />
+    <AuxValue name="FormSettings_variablesLocal" type="java.lang.Boolean" value="false" />
+    <AuxValue name="FormSettings_variablesModifier" type="java.lang.Integer" value="2" />
   </AuxValues>
 
   <Layout>
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Group type="102" attributes="0">
-              <EmptySpace min="-2" pref="46" max="-2" attributes="0"/>
+        <Group type="102" alignment="1" attributes="0">
+          <EmptySpace max="32767" attributes="0" />
+          <Component id="jLabel_Title" min="-2" max="-2" attributes="0" />
+          <EmptySpace min="-2" pref="196" max="-2" attributes="0" />
+        </Group>
+        <Group type="102" alignment="0" attributes="0">
+          <EmptySpace min="-2" pref="46" max="-2" attributes="0" />
+          <Group type="103" groupAlignment="1" attributes="0">
+            <Component id="jButton_Login" min="-2" pref="113" max="-2" attributes="0" />
+            <Group type="102" attributes="0">
               <Group type="103" groupAlignment="0" attributes="0">
-                  <Component id="jLabel_Email" min="-2" pref="37" max="-2" attributes="0"/>
-                  <Group type="102" alignment="0" attributes="0">
-                      <Component id="jLabel_Email1" min="-2" pref="61" max="-2" attributes="0"/>
-                      <EmptySpace type="separate" max="-2" attributes="0"/>
-                      <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="jButton_Login" min="-2" pref="95" max="-2" attributes="0"/>
-                          <Component id="jPasswordField_Password" min="-2" pref="480" max="-2" attributes="0"/>
-                      </Group>
-                  </Group>
+                <Component id="jLabel_Password" alignment="0" min="-2" pref="138" max="-2"
+                  attributes="0" />
+                <Component id="jLabel_Email" alignment="0" min="-2" max="-2" attributes="0" />
               </Group>
-              <EmptySpace pref="125" max="32767" attributes="0"/>
-          </Group>
-          <Group type="103" rootIndex="1" groupAlignment="0" attributes="0">
-              <Group type="102" alignment="0" attributes="0">
-                  <EmptySpace min="-2" pref="126" max="-2" attributes="0"/>
-                  <Component id="jTextField_Email" min="-2" pref="479" max="-2" attributes="0"/>
-                  <EmptySpace pref="125" max="32767" attributes="0"/>
+              <EmptySpace max="-2" attributes="0" />
+              <Group type="103" groupAlignment="0" attributes="0">
+                <Component id="jTextField_Email" min="-2" pref="479" max="-2" attributes="0" />
+                <Component id="jPasswordField_Password" min="-2" pref="480" max="-2" attributes="0" />
               </Group>
+            </Group>
           </Group>
+          <EmptySpace pref="70" max="32767" attributes="0" />
+        </Group>
       </Group>
     </DimensionLayout>
     <DimensionLayout dim="1">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Group type="102" alignment="0" attributes="0">
-              <EmptySpace min="-2" pref="211" max="-2" attributes="0"/>
-              <Component id="jLabel_Email" min="-2" max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="0" attributes="0">
-                  <Group type="102" attributes="0">
-                      <EmptySpace min="-2" pref="35" max="-2" attributes="0"/>
-                      <Component id="jLabel_Email1" min="-2" max="-2" attributes="0"/>
-                  </Group>
-                  <Group type="102" alignment="0" attributes="0">
-                      <EmptySpace min="-2" pref="19" max="-2" attributes="0"/>
-                      <Component id="jPasswordField_Password" min="-2" pref="40" max="-2" attributes="0"/>
-                  </Group>
+        <Group type="102" alignment="0" attributes="0">
+          <EmptySpace min="-2" pref="42" max="-2" attributes="0" />
+          <Component id="jLabel_Title" min="-2" max="-2" attributes="0" />
+          <Group type="103" groupAlignment="0" attributes="0">
+            <Group type="102" attributes="0">
+              <EmptySpace min="-2" pref="104" max="-2" attributes="0" />
+              <Group type="103" groupAlignment="3" attributes="0">
+                <Component id="jLabel_Email" alignment="3" min="-2" max="-2" attributes="0" />
+                <Component id="jTextField_Email" alignment="3" min="-2" pref="46" max="-2"
+                  attributes="0" />
               </Group>
-              <EmptySpace min="-2" pref="29" max="-2" attributes="0"/>
-              <Component id="jButton_Login" min="-2" pref="36" max="-2" attributes="0"/>
-              <EmptySpace pref="155" max="32767" attributes="0"/>
-          </Group>
-          <Group type="103" rootIndex="1" groupAlignment="0" attributes="0">
-              <Group type="102" alignment="0" attributes="0">
-                  <EmptySpace min="-2" pref="187" max="-2" attributes="0"/>
-                  <Component id="jTextField_Email" min="-2" pref="46" max="-2" attributes="0"/>
-                  <EmptySpace pref="273" max="32767" attributes="0"/>
+            </Group>
+            <Group type="102" alignment="0" attributes="0">
+              <EmptySpace min="-2" pref="188" max="-2" attributes="0" />
+              <Group type="103" groupAlignment="3" attributes="0">
+                <Component id="jPasswordField_Password" alignment="3" min="-2" pref="40" max="-2"
+                  attributes="0" />
+                <Component id="jLabel_Password" alignment="3" min="-2" max="-2" attributes="0" />
               </Group>
+            </Group>
           </Group>
+          <EmptySpace min="-2" pref="39" max="-2" attributes="0" />
+          <Component id="jButton_Login" min="-2" pref="51" max="-2" attributes="0" />
+          <EmptySpace pref="145" max="32767" attributes="0" />
+        </Group>
       </Group>
     </DimensionLayout>
   </Layout>
   <SubComponents>
     <Component class="javax.swing.JLabel" name="jLabel_Email">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Email:"/>
+        <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+          <Font name="Segoe UI" size="24" style="0" />
+        </Property>
+        <Property name="text" type="java.lang.String" value="Email:" />
       </Properties>
     </Component>
-    <Component class="javax.swing.JLabel" name="jLabel_Email1">
+    <Component class="javax.swing.JLabel" name="jLabel_Password">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Password:"/>
+        <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+          <Font name="Segoe UI" size="24" style="0" />
+        </Property>
+        <Property name="text" type="java.lang.String" value="Password:" />
       </Properties>
     </Component>
     <Component class="javax.swing.JTextField" name="jTextField_Email">
     </Component>
     <Component class="javax.swing.JButton" name="jButton_Login">
       <Properties>
-        <Property name="text" type="java.lang.String" value="LOGIN"/>
+        <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+          <Font name="Segoe UI" size="18" style="1" />
+        </Property>
+        <Property name="text" type="java.lang.String" value="LOGIN" />
       </Properties>
       <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton_LoginActionPerformed"/>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener"
+          parameters="java.awt.event.ActionEvent" handler="jButton_LoginActionPerformed" />
       </Events>
     </Component>
     <Component class="javax.swing.JPasswordField" name="jPasswordField_Password">
+    </Component>
+    <Component class="javax.swing.JLabel" name="jLabel_Title">
+      <Properties>
+        <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+          <Font name="Segoe UI" size="36" style="1" />
+        </Property>
+        <Property name="text" type="java.lang.String"
+          value="QU&#x1ea2;N L&#xdd; TH&#x1af; VI&#x1ec6;N" />
+      </Properties>
     </Component>
   </SubComponents>
 </Form>
