--- a/QuanLyThuVien/src/main/java/com/mycompany/quanlythuvien/view/panel/QuanLyBanDocPanel.form
+++ b/QuanLyThuVien/src/main/java/com/mycompany/quanlythuvien/view/panel/QuanLyBanDocPanel.form
@@ -25,8 +25,8 @@
           <Group type="102" alignment="0" attributes="0">
               <Component id="jToolBar1" min="-2" pref="51" max="-2" attributes="0"/>
               <EmptySpace type="separate" max="-2" attributes="0"/>
-              <Component id="scrollPaneUsers" pref="340" max="32767" attributes="0"/>
-              <EmptySpace min="-2" pref="40" max="-2" attributes="0"/>
+              <Component id="scrollPaneUsers" min="-2" pref="323" max="-2" attributes="0"/>
+              <EmptySpace pref="57" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
