update UX ChiTietBanDoc, QuanLyBanDoc
- Implemented split panels to show detailed book information when click on row of table PhieuMuon or PhieuPhat. (ChiTietBanDoc)
- Enhanced BanDoc list view with pagination (QuanLyBanDoc)

--- a/QuanLyThuVien/src/main/java/com/mycompany/quanlythuvien/view/panel/QuanLyBanDocPanel.form
+++ b/QuanLyThuVien/src/main/java/com/mycompany/quanlythuvien/view/panel/QuanLyBanDocPanel.form
@@ -18,27 +18,18 @@
       <Group type="103" groupAlignment="0" attributes="0">
           <Component id="jToolBar1" alignment="1" max="32767" attributes="0"/>
           <Component id="scrollPaneUsers" alignment="0" pref="620" max="32767" attributes="0"/>
-          <Group type="102" alignment="0" attributes="0">
-              <EmptySpace min="-2" pref="166" max="-2" attributes="0"/>
-              <Component id="btnPrv" min="-2" max="-2" attributes="0"/>
-              <EmptySpace min="-2" pref="130" max="-2" attributes="0"/>
-              <Component id="btnNxt" min="-2" max="-2" attributes="0"/>
-              <EmptySpace max="32767" attributes="0"/>
-          </Group>
+          <Component id="panelPagination" alignment="0" max="32767" attributes="0"/>
       </Group>
     </DimensionLayout>
     <DimensionLayout dim="1">
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" alignment="0" attributes="0">
               <Component id="jToolBar1" min="-2" pref="51" max="-2" attributes="0"/>
-              <EmptySpace type="separate" max="-2" attributes="0"/>
-              <Component id="scrollPaneUsers" min="-2" pref="289" max="-2" attributes="0"/>
-              <EmptySpace type="unrelated" max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="btnPrv" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="btnNxt" alignment="3" min="-2" max="-2" attributes="0"/>
-              </Group>
-              <EmptySpace pref="56" max="32767" attributes="0"/>
+              <EmptySpace type="separate" min="-2" max="-2" attributes="0"/>
+              <Component id="scrollPaneUsers" pref="336" max="32767" attributes="0"/>
+              <EmptySpace min="-2" pref="12" max="-2" attributes="0"/>
+              <Component id="panelPagination" max="32767" attributes="0"/>
+              <EmptySpace max="-2" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -142,18 +133,43 @@
         </Component>
       </SubComponents>
     </Container>
-    <Component class="javax.swing.JButton" name="btnPrv">
+    <Container class="javax.swing.JPanel" name="panelPagination">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Trang tr&#x1b0;&#x1edb;c"/>
+        <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
+          <Color id="Default Cursor"/>
+        </Property>
       </Properties>
-    </Component>
-    <Component class="javax.swing.JButton" name="btnNxt">
-      <Properties>
-        <Property name="text" type="java.lang.String" value="Trang sau"/>
-      </Properties>
-      <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnNxtActionPerformed"/>
-      </Events>
-    </Component>
+
+      <Layout class="org.netbeans.modules.form.compat2.layouts.DesignFlowLayout"/>
+      <SubComponents>
+        <Component class="javax.swing.JButton" name="btnPrv">
+          <Properties>
+            <Property name="text" type="java.lang.String" value="Trang tr&#x1b0;&#x1edb;c"/>
+            <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
+              <Border info="null"/>
+            </Property>
+          </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnPrvActionPerformed"/>
+          </Events>
+        </Component>
+        <Component class="javax.swing.JLabel" name="lblPageInfo">
+          <Properties>
+            <Property name="text" type="java.lang.String" value="Trang 1/1"/>
+          </Properties>
+        </Component>
+        <Component class="javax.swing.JButton" name="btnNxt">
+          <Properties>
+            <Property name="text" type="java.lang.String" value="Trang sau"/>
+            <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
+              <Border info="null"/>
+            </Property>
+          </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnNxtActionPerformed"/>
+          </Events>
+        </Component>
+      </SubComponents>
+    </Container>
   </SubComponents>
 </Form>
