--- a/QuanLyThuVien/src/main/java/com/mycompany/quanlythuvien/view/dialog/ThongTinSachDialog.form
+++ b/QuanLyThuVien/src/main/java/com/mycompany/quanlythuvien/view/dialog/ThongTinSachDialog.form
@@ -376,7 +376,10 @@
             </Container>
             <Component class="javax.swing.JButton" name="btnLuu">
               <Properties>
-                <Property name="text" type="java.lang.String" value="L&#x1b0;u"/>
+                <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+                  <Font name="Arial Unicode MS" size="14" style="0"/>
+                </Property>
+                <Property name="text" type="java.lang.String" value="[&#x2713;] L&#x1b0;u"/>
               </Properties>
               <Events>
                 <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnLuuActionPerformed"/>
@@ -384,7 +387,10 @@
             </Component>
             <Component class="javax.swing.JButton" name="btnHuy">
               <Properties>
-                <Property name="text" type="java.lang.String" value="H&#x1ee7;y"/>
+                <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+                  <Font name="Arial Unicode MS" size="14" style="0"/>
+                </Property>
+                <Property name="text" type="java.lang.String" value="[&#xd7;] H&#x1ee7;y"/>
               </Properties>
               <Events>
                 <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnHuyActionPerformed"/>
